# debug

./: pyproject.toml  setup.cfg  setup.py
requests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_debug.py
