[tool.poetry]
name = "debug"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# optional
pytest = { version = "~*", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.extras]
security = ["pytest"]

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
versioning = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", ]
build-backend = "poetry.core.masonry.api"
